Harden HTTP version configuration support.
Motivation:

The new HTTP version configuration defines the list of HTTP versions supported by the client or the server.

The implementation does not always enforce this requirement.

Changes:

A version specific client request should not be sent when the client does not support it.

A server request should ensure that the protocol is supported by the server before processing it.

During a client SSL handshake, when ALPN is not supported by the server, the client should fallback to a supported protocol.

A client configured with options should respect the supported ALPN versions when set.

Update the default configuration to support HTTP/1.0 by default as well, since previous support was implied by HTTP/1.1 presence.